# aris

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  snapcraft.yaml
aris/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  configure  configure.ac
cmake/: FindGTK3.cmake  (+1 more)
qt/: Aris.pro  CMakeLists.txt  DrawerTools.qml  GoalLine.qml  KeyButton.qml  KeyGroup.qml  ProofArea.qml  RuleAbbreviations.js  aio.c  aio.h  aris-qm2.pro  aris-qt.pro  auxconnector.cpp  auxconnector.h  connector.cpp  connector.h  goaldata.cpp  goaldata.h  goalmodel.cpp  goalmodel.h  goals-qt.c  goals-qt.h  interop-isar.c  interop-isar.h  list.c  list.h  main.cpp  main.qml  process-main.c  process.c  process.h  proof.c  proof.h  proofdata.cpp  proofdata.h  proofline.cpp  proofline.h  proofmodel.cpp  proofmodel.h  qml.qrc  (+21 more)
qt/App/: aris-qm2.pro  main.cpp  main.qml  resources.qrc
qt/GNU-Aris/: Main.qml  gnu-aris.qbs  main.cpp  resources.qrc
qt/Web/multi-threaded/: aris-qm2.html  aris-qm2.js
qt/Web/single-threaded/: aris-qm2.html  aris-qm2.js
qt/assets/icons/arisqt/: index.theme
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QGuiApplication.B6CAC5E4DFA114B5.idx  QIcon.195B4B77B948C694.idx  QMetaType.B3BDAF5CD351B71C.idx  QQmlApplicationEngine.FACC6DBD18FF62BB.idx  __stddef_max_align_t.h.A8D1AFBD0BE8818A.idx  algorithm.DD4397420C156B06.idx  algorithmfwd.h.2A602E7BFB7E1A06.idx  align.h.A0007051410DCB49.idx  aligned_buffer.h.0D7147178674E3E7.idx  alloc_traits.h.1B6C926F31E4D0DD.idx  alloc_traits.h.F5F8AD3A7C56DC07.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.782F4C72E1DF2FBE.idx  allocator.h.5D1607745935AA4B.idx  array.8B2F16F87D5B454D.idx  assertions.h.B115C115B1574B0D.idx  atomic.E4A1065C24EAC39A.idx  atomic_base.h.4ACC1C64166DE5CF.idx  atomic_lockfree_defines.h.51EBF6963A7E86F1.idx  atomic_word.h.BD1D35DE5175656F.idx  atomicity.h.FD1BF6C45D651C36.idx  auto_ptr.h.0883C6FD2E085558.idx  basic_string.h.0E3AE118F103BEFB.idx  basic_string.tcc.1608BA4F453068FF.idx  bessel_function.tcc.2693DB61D4EDA884.idx  beta_function.tcc.D2671726CD0B7D8B.idx  binders.h.85120E96D14B0D0E.idx  bit.B432B7DE06CFD9E8.idx  c++allocator.h.20E8DB782047C6DF.idx  c++config.h.B5D8C62D8316B39F.idx  c++locale.h.3CF427595247D00D.idx  cctype.B718B6AD0843EAAE.idx  cdefs.h.8113CACA75BA375E.idx  cerrno.E603F5FC24B8FA71.idx  char_traits.h.7DBE35053B7112C2.idx  charconv.h.AA78E6CC6F7D847C.idx  chrono.36E9E63EEA322249.idx  chrono.h.BBD9AE6A3372201D.idx  clocale.EF1AE2B4E8438B6E.idx  cmath.E32425ED2FD51FE4.idx  (+309 more)
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/: Debug_Desktop__307503251037df1d.bg
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/android_support/: android_support.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/concurrent/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/concurrent-private/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/core/: core.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/core-private/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/core5compat/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/core5compat-private/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/dbus/: dbus.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/dbus-private/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/designer/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/genmodules/Qt/6785235723682211/modules/Qt/designer-private/: module.qbs
qt/build-gnu-aris-Desktop_Qt_6_5_0_GCC_64bit-Debug/Debug_Desktop__307503251037df1d/gnu-aris.6617a2d3/: gnu-aris.qrc  qrc_gnu-aris.cpp  qrc_resources.cpp
qt/i18n/: aris-qt_ar.ts  aris-qt_de.ts  aris-qt_fr.ts  aris-qt_hu.ts
qt2/: CMakeLists.txt  Main.qml  main.cpp
qt2/Components/ProofLine/: ProofLine.qml  ProofLineHighlighter.cpp  ProofLineHighlighter.h  ProofLineSyntaxHighlighter.cpp  ProofLineSyntaxHighlighter.h
qt2/GNU/Aris/Widgets/: CMakeLists.txt
qt2/GNU/Aris/Widgets/ProofLine/: Highlighter.cpp  Highlighter.h  HighlighterBridge.cpp  HighlighterBridge.h  ProofLine.qml
src/: Makefile.am  Makefile.in  aio.c  aio.h  and-conn.xpm  app.c  app.h  aris-proof.c  aris-proof.h  aris.c  callbacks.c  callbacks.h  conf-file.c  conf-file.h  elm-conn.xpm  goal.c  goal.h  interop-isar.c  interop-isar.h  list.c  list.h  menu.c  menu.h  nil-conn.xpm  or-conn.xpm  pound.h  process-main.c  process.c  process.h  proof.c  proof.h  rules-table.c  rules-table.h  rules.h  sen-data.c  sen-data.h  sen-parent.c  sen-parent.h  sentence-screen-keyboard.c  sentence-screen-keyboard.h  (+16 more)
src/.deps/: aio.Po  app.Po  aris-proof.Po  aris.Po  callbacks.Po  conf-file.Po  goal.Po  interop-isar.Po  list.Po  menu.Po  process-bool.Po  process-infer.Po  process-main.Po  process-misc.Po  process-quant.Po  process.Po  proof.Po  rules-table.Po  sen-data.Po  sen-parent.Po  sentence.Po  sexpr-process-bool.Po  sexpr-process-equiv.Po  sexpr-process-infer.Po  sexpr-process-misc.Po  sexpr-process-quant.Po  sexpr-process.Po  var.Po  vec.Po
(+316 files in other folders)
